// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scenes/Lists/List/Item Should render a checked icon when the item is done 1`] = `
<styled.li
  checked={true}
>
  <CheckedIcon
    onClick={[Function]}
  />
  <Editable
    onChange={[Function]}
  >
    This is an item
  </Editable>
  <DeleteIcon
    onClick={[Function]}
  />
</styled.li>
`;

exports[`scenes/Lists/List/Item Should render a unchecked icon when the item is not done 1`] = `
<styled.li
  checked={false}
>
  <UncheckedIcon
    onClick={[Function]}
  />
  <Editable
    onChange={[Function]}
  >
    This is an item
  </Editable>
  <DeleteIcon
    onClick={[Function]}
  />
</styled.li>
`;
